refactor: improve auth service error handling and CORS config
- Add custom exception classes (InvalidCredentials, UserAlreadyExists,
  UserNotFound) for clearer error responses
- Enhance GlobalExceptionHandler with specific exception handlers
- Update AuthService with better validation and error messages
- Clean up CORS configuration
- Remove tracked .DS_Store files

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>